--- a/dashboard.html
+++ b/dashboard.html
@@ -3,28 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Authorization Test</title>
+    <title>API Debugging Test</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             display: flex;
+            height: 100vh;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
+            background-color: #f0f2f5;
         }
-        .auth-container {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        .container {
             text-align: center;
+            background-color: #ffffff;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
         button {
-            padding: 10px;
+            padding: 10px 20px;
+            font-size: 18px;
             background-color: #007bff;
-            color: white;
+            color: #fff;
             border: none;
+            border-radius: 5px;
             cursor: pointer;
         }
         button:hover {
@@ -34,12 +36,69 @@
 </head>
 <body>
 
-    <div class="auth-container">
-        <h2>Test API Authorization</h2>
-        <button onclick="testAuthorization()">Check Authorization</button>
+    <div class="container">
+        <h2>API Debugging Test</h2>
+        <button id="test-api-button">Test API Request</button>
+        <div id="response-output"></div>
     </div>
 
-    <script type="module" src="auth.mjs"></script>
+    <script>
+        const API_KEY_URL = 'https://v2.api.noroff.dev/auth/create-api-key';
+
+        function get(key) {
+            console.log(`Retrieving from localStorage: ${key}`);
+            return JSON.parse(localStorage.getItem(key));
+        }
+
+        async function testAuthorization() {
+            const token = get('token');
+
+            if (!token) {
+                console.error('Authorization test failed: No token found.');
+                document.getElementById('response-output').innerHTML = "❌ No token found. Please log in first.";
+                return;
+            }
+
+            console.log('Retrieved token:', token);
+
+            try {
+                console.log('Sending authorization request to:', API_KEY_URL);
+
+                const response = await fetch(API_KEY_URL, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${token}` // Attach token for authentication
+                    },
+                    body: JSON.stringify({})
+                });
+
+                console.log('Authorization response received:', response);
+
+                const responseText = await response.text();
+                console.log('Response Text:', responseText);
+
+                if (!response.ok) {
+                    console.error(`Authorization failed. Status: ${response.status}`);
+                    document.getElementById('response-output').innerHTML = `❌ Authorization failed. Status: ${response.status}`;
+                    return;
+                }
+
+                const data = JSON.parse(responseText);  // Handle potential empty response
+                console.log('Authorization successful! API Key response:', data);
+
+                document.getElementById('response-output').innerHTML = `✅ Authorization successful! API Key: <strong>${data.data.key}</strong>`;
+            } catch (error) {
+                console.error('Authorization test failed:', error);
+                document.getElementById('response-output').innerHTML = "❌ Authorization test failed. Check console for details.";
+            }
+        }
+
+        document.getElementById('test-api-button').addEventListener('click', () => {
+            console.log('Test API Button Clicked');
+            testAuthorization();
+        });
+    </script>
 
 </body>
 </html>
