--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Test</title>
+    <title>Register</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,12 +13,12 @@
             height: 100vh;
             background-color: #f4f4f4;
         }
-        .login-container {
+        .register-container {
             background: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
+            width: 320px;
         }
         label, input {
             display: block;
@@ -36,24 +36,40 @@
         button:hover {
             background-color: #0056b3;
         }
+        .error {
+            color: red;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
 
-    <div class="login-container">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            
-            <button type="submit">Login</button>
-        </form>
-    </div>
-    <p>Don't have an account? <a href="register.html">Register here</a></p>
+    <div class="register-container">
+        <h2>Register</h2>
+        <form id="registerForm">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
 
-    <script src="login.js"></script>
+            <label for="email">Email (stud.noroff.no only):</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="password">Password (min 8 characters):</label>
+            <input type="password" id="password" name="password" required>
+
+            <label for="bio">Bio (Max 160 characters):</label>
+            <input type="text" id="bio" name="bio" maxlength="160">
+
+            <label for="avatarUrl">Avatar URL (Optional):</label>
+            <input type="text" id="avatarUrl" name="avatarUrl">
+            <label for="bannerUrl">Banner URL (Optional):</label>
+            <input type="text" id="bannerUrl" name="bannerUrl">
+            <button type="submit">Register</button>
+        </form>
+
+        <p class="error" id="errorMessage"></p>
+        <p>Already have an account? <a href="index.html">Login here</a></p>
+    </div>
+
+    <script type="module" src="register.js"></script>
 </body>
 </html>
