--- a/profile.html
+++ b/profile.html
@@ -4,123 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Author Profile</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background-color: #f4f4f4;
-            text-align: center;
-            margin: 0;
-        }
-        .profile-container {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            width: 100%;
-            text-align: center;
-            position: relative;
-        }
-        .profile-banner {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 8px 8px 0 0;
-        }
-        .profile-avatar {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            margin-top: -50px;
-            border: 3px solid white;
-        }
-        h2 {
-            margin: 10px 0;
-        }
-        p {
-            font-size: 14px;
-            color: #666;
-        }
-        .email {
-            font-weight: bold;
-            color: #007bff;
-            text-decoration: none;
-        }
-        .email:hover {
-            text-decoration: underline;
-        }
-        .back-button, .view-posts-button, .follow-button {
-            margin-top: 15px;
-            padding: 10px 20px;
-            border: none;
-            background-color: #007bff;
-            color: white;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        .back-button:hover, .view-posts-button:hover, .follow-button:hover {
-            background-color: #0056b3;
-        }
-        .posts-container {
-            max-width: 500px;
-            width: 100%;
-            background: white;
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            margin-top: 20px;
-        }
-        .post {
-            background: white;
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-            text-align: left;
-        }
-        .post:last-child {
-            border-bottom: none;
-        }
-        .post h3 {
-            margin: 5px 0;
-            font-size: 16px;
-            color: #333;
-        }
-        .post p {
-            margin: 5px 0;
-            font-size: 14px;
-            color: #666;
-        }
-        .post small {
-            display: block;
-            margin-top: 5px;
-            font-size: 12px;
-            color: #888;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <div class="main-container">
+    
     <div class="profile-container">
         <img id="banner" class="profile-banner" src="" alt="Profile Banner">
         <img id="avatar" class="profile-avatar" src="" alt="Profile Avatar">
         <h2 id="name">Loading...</h2>
         <p id="bio">Loading bio...</p>
         <p id="following-count" class="stats">Following: Loading...</p>
-<p id="followers-count" class="stats">Followers: Loading...</p>
+        <p id="followers-count" class="stats">Followers: Loading...</p>
         <p><strong>Email:</strong> <a id="email" class="email" href="#">Loading...</a></p>
-        <button class="view-posts-button" onclick="fetchAuthorPosts()">View All Posts</button>
-        <button id="follow-button" class="follow-button" onclick="toggleFollow()">Loading...</button>
-        <button class="back-button" onclick="goBack()">Go Back</button>
+
+        <div class="button-container">
+            <button class="button follow-button" id="follow-button">Follow</button>
+            <button class="button unfollow-button" id="unfollow-button">Unfollow</button>
+        </div>
+
+        <button class="button follow-button" onclick="fetchAuthorPosts()">View All Posts</button>
     </div>
 
-    <div class="posts-container" id="posts-container" style="display: none;">
+    <div class="posts-container" id="posts-container">
         <h3>Posts by Author</h3>
         <div id="posts-list">Loading posts...</div>
     </div>
+    <div class="posts-container">
+    
 
     <script src="profile.js"></script>
 
